# Senko-Kozlovskiy_code

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: ci.yml
include/: config.h
src/: CMakeLists.txt  database.c  database.h  driver.c  driver.h  main.c  order.c  order.h  report.c  report.h  utils.c  utils.h  vehicle.c  vehicle.h
tests/: CMakeLists.txt  test_driver  test_driver.c  test_driver.cpp
